style: fix Make Art challenges tips overflow

--- a/styles/views/challenge.styl
+++ b/styles/views/challenge.styl
@@ -1,10 +1,22 @@
 .page-challenge
 
-    .button-hint
-        button-color(color-editor-bg)
+    .inner-header 
+        display: flex
+        justify-content: space-between;
 
-        &.highlight
-            background red
+    .inner-title
+        display: flex;
+        flex-direction: row;
+
+    .button-container
+        display: flex
+        align-items: flex-start
+
+        .button-hint
+            button-color(color-editor-bg)
+
+            &.highlight
+                background red
 
     .success-display
         clearfix()
@@ -127,3 +139,11 @@
         
         &:hover
             background-color lighten(color-blue, 5)
+
+
+
+
+
+
+
+
